--- a/apps/tester-federation/package.json
+++ b/apps/tester-federation/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start:hostapp": "react-native webpack-start --webpackConfig webpack.config.host-app.mjs",
-    "start:miniapp": "react-native webpack-start --webpackConfig webpack.config.mini-app.mjs --port 8082"
+    "start:hostapp": "react-native webpack-start --webpackConfig webpack.config.host-app.cjs",
+    "start:miniapp": "react-native webpack-start --webpackConfig webpack.config.mini-app.cjs --port 8082"
   },
   "dependencies": {
     "react": "18.2.0",
